feature: insert change of truck location in map

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -31,7 +31,7 @@
 
       <div class="col-xl-10 col-lg-12 col-md-9">
         <% if(validacao.length>0){ %>
-        <div class="alert alert-danger mb-1">
+        <div class="alert alert-danger mt-1">
           <strong>Atenção!</strong>
           <ul>
             <% for(let i=0; i<validacao.length;i++){ %>
@@ -45,7 +45,7 @@
             <!-- Nested Row within Card Body -->
             <div class="row">
               <div class="col-lg-6 d-none d-lg-block"><img src="/static/img/login3.jpg" class="img-fluid"
-                  alt="Responsive image" style="height: 100%;"></div>
+                  alt="Responsive image" ></div>
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center mb-5">
