--- a/src/views/home.html
+++ b/src/views/home.html
@@ -2,208 +2,202 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Painel de comando</title>
+  <title>Painel de comando</title>
 
-    <!-- Custom fonts for this template-->
-    <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+  <!-- Custom fonts for this template-->
+  <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
 
-    <!-- Custom styles for this template-->
-    <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="#">
-    <script src="https://rawgit.com/socketio/socket.io-client/master/dist/socket.io.js"></script>
+  <!-- Custom styles for this template-->
+  <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="#">
 </head>
 
 <body id="page-top">
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+  <!-- Page Wrapper -->
+  <div id="wrapper">
 
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
 
-            <!-- Main Content -->
-            <div id="content">
-                <nav class="navbar navbar-expand-md navbar-dark bg-success  mb-4">
-                    <!-- navbar navbar-expand navbar-light bg-success topbar mb-4 static-top shadow -->
-                    <!-- Brand -->
+      <!-- Main Content -->
+      <div id="content">
+        <nav class="navbar navbar-expand-md navbar-dark bg-success  mb-4">
+          <!-- navbar navbar-expand navbar-light bg-success topbar mb-4 static-top shadow -->
+          <!-- Brand -->
 
-                    <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
-                        data-target="#collapsibleNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+          <!-- Toggler/collapsibe Button -->
+          <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-                    <!-- Navbar links -->
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <h4 class="m-0 font-weight-bold text-white">Home</h4>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <h4 class="m-0 font-weight-bold text-white">Produção</h4>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <h4 class="m-0 font-weight-bold text-white">Relatórios</h4>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <h4 class="m-0 font-weight-bold text-white">Log de erros</h4>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+          <!-- Navbar links -->
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <h4 class="m-0 font-weight-bold text-white">Home</h4>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <h4 class="m-0 font-weight-bold text-white">Produção</h4>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <h4 class="m-0 font-weight-bold text-white">Relatórios</h4>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <h4 class="m-0 font-weight-bold text-white">Log de erros</h4>
+                </a>
+              </li>
+            </ul>
+          </div>
 
-                    <ul class="navbar-nav ml-auto mb-0">
-                        <!--<div class="topbar-divider d-none d-xl-block"></div> -->
-                        <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-white"
-                                    style="font-size:larger;"><%= name%></span>
-                                <img class="img-profile rounded" style="width: 50px; height: 50px;"
-                                    src="/static/img/<%= name%>.png">
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
+          <ul class="navbar-nav ml-auto mb-0">
+            <!--<div class="topbar-divider d-none d-xl-block"></div> -->
+            <!-- Nav Item - User Information -->
+            <li class="nav-item dropdown no-arrow">
+              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <span class="mr-2 d-none d-lg-inline text-white" style="font-size:larger;"><%= name%></span>
+                <img class="img-profile rounded" style="width: 50px; height: 50px;" src="/static/img/<%= name%>.png">
+              </a>
+              <!-- Dropdown - User Information -->
+              <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                <a class="dropdown-item" href="#">
+                  <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Profile
+                </a>
+                <a class="dropdown-item" href="#">
+                  <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Settings
+                </a>
+                <a class="dropdown-item" href="#">
+                  <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Activity Log
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Logout
+                </a>
+              </div>
+            </li>
+          </ul>
 
-                </nav>
-                <!-- Begin Page Content -->
-                <div class="container-fluid">
-                    <!-- Content Row -->
-                    <div class="row">
+        </nav>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+          <!-- Content Row -->
+          <div class="row">
 
-                    </div>
+          </div>
 
-                    <div class="row mb-4">
-                        <!-- Card do caminhão -->
-                        <% if( truck && truck.length > 0 ){%>
-                            <% for( var i = 0; i < truck.length; i++){ %>
-                            <div class="col-xs-12  col-sm-6 col-md-3 col-lg-2">
-                                <div class="card shadow mb-1">
-                                    <!-- Card Header - Dropdown -->
-                                    <div class="card-header d-flex flex-row align-items-center justify-content-between">
-                                        <div class="ml-auto mr-auto">
-                                            <h5 class="m-0 font-weight-bold text-success"> <%= truck[i].placa %> </h5>
-                                        </div>
-                                        <div class="ml-auto ">
-                                            <img src="/static/img/signal-strength0.svg" alt="sinal"
-                                                style="max-width: 25px;" />
-                                        </div>
-                                    </div>
-                                    <!-- Card Body -->
-                                    <div class="card-body">
-                                        <div class="text-center mt-0 pt-0">
-                                            <span class="mr-0">
-                                                <form action="/api/truck/" method="post">
-                                                    <input type="hidden" name="truck" value="<%= truck[i].placa %>">
-                                                    <input type="image" src="/static/img/truck.svg" alt="Submit Form" />                                                        
-                                                </form>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <% } %>
-                        <% }else{ %>
-                            <div class="col-xs-12  col-sm-6 col-md-3 col-lg-2">
-                                Não existem caminhões cadastrados!
-                            </div>
-                        <% } %>
-                    <div class="row mb-4">
-
-
-                    </div>
-                    <!-- Content Row -->
+          <div class="row mb-4">
+            <!-- Card do caminhão -->
+            <% if( truck && truck.length > 0 ){%>
+            <% for( var i = 0; i < truck.length; i++){ %>
+            <div class="col-xs-12  col-sm-6 col-md-3 col-lg-2">
+              <div class="card shadow mb-1">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header d-flex flex-row align-items-center justify-content-between">
+                  <div class="ml-auto mr-auto">
+                    <h5 class="m-0 font-weight-bold text-success"> <%= truck[i].placa %> </h5>
+                  </div>
+                  <div class="ml-auto ">
+                    <img src="/static/img/signal-strength0.svg" alt="sinal" style="max-width: 25px;" />
+                  </div>
                 </div>
-                <!-- /.container-fluid -->
+                <!-- Card Body -->
+                <div class="card-body">
+                  <div class="text-center mt-0 pt-0">
+                    <span class="mr-0">
+                      <form action="/api/truck/" method="post">
+                        <input type="hidden" name="truck" value="<%= truck[i].placa %>">
+                        <input type="image" src="/static/img/truck.svg" alt="Submit Form" />
+                      </form>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <% } %>
+            <% }else{ %>
+            <div class="col-xs-12  col-sm-6 col-md-3 col-lg-2">
+              Não existem caminhões cadastrados!
+            </div>
+            <% } %>
+            <div class="row mb-4">
+
 
             </div>
-            <!-- End of Main Content -->
-
-            <!-- Footer -->
-            <footer class="sticky-footer bg-success">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; U&M 2020</span>
-                    </div>
-                </div>
-            </footer>
-            <!-- End of Footer -->
+            <!-- Content Row -->
+          </div>
+          <!-- /.container-fluid -->
 
         </div>
-        <!-- End of Content Wrapper -->
+        <!-- End of Main Content -->
+
+        <!-- Footer -->
+        <footer class="sticky-footer bg-success">
+          <div class="container my-auto">
+            <div class="copyright text-center my-auto">
+              <span>Copyright &copy; U&M 2020</span>
+            </div>
+          </div>
+        </footer>
+        <!-- End of Footer -->
+
+      </div>
+      <!-- End of Content Wrapper -->
 
     </div>
     <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
+      <i class="fas fa-angle-up"></i>
     </a>
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Pronto para sair?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Pronto para sair?</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">Selecione "Logout" se deseja terminar a sessão.</div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+            <a class="btn btn-success" href="#">
+              <form id="formLogout" action="/api/login/logout" method="post">
+                <div onclick="document.getElementById('formLogout').submit()">
+                  Logout
                 </div>
-                <div class="modal-body">Selecione "Logout" se deseja terminar a sessão.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-success" href="#">
-                        <form id="formLogout" action="/api/login/logout" method="post">
-                            <div onclick="document.getElementById('formLogout').submit()">
-                                Logout
-                            </div>
-                        </form>
-                    </a>
-                </div>
-            </div>
+              </form>
+            </a>
+          </div>
         </div>
+      </div>
     </div>
-    
+
     <!-- Bootstrap core JavaScript-->
     <script src="/static/vendor/jquery/jquery.min.js"></script>
     <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
