--- a/src/views/truck.html
+++ b/src/views/truck.html
@@ -176,10 +176,30 @@
             </div>
             <div class="col-xl-2 col-md-6 mb-4">
               <button type="button" class="btn btn-outline-info btn-block">
-                <div id="changeDt" class="font-weight-bold" style="font-size:larger;" data-toggle="modal" data-target="#modalDt" >Alterar DT</div>
+                <div id="changeDt" class="font-weight-bold" style="font-size:larger;" data-toggle="modal"
+                  data-target="#modalDt">Alterar DT</div>
               </button>
             </div>
             <% } %>
+          </div>
+
+          <div class='row'>
+            <div class="col-xl-4 mb-4">
+              <button type="button" class="btn btn-outline-dark btn-block " >
+                <div id="peBtn" class="font-weight-bold" style="font-size:larger;">PE</div>
+              </button>
+            </div>
+            <div class="col-xl-4 mb-4">
+              <button type="button" class="btn btn-outline-dark btn-block" onclick="pararMissao()">
+                <div id="cpBtn" class="font-weight-bold" style="font-size:larger;">CP</div>
+              </button>
+            </div>
+            <div class="col-xl-4 mb-4">
+              <button type="button" class="btn btn-outline-dark btn-block" onclick="voltar()">
+                <div id="imBtn" class="font-weight-bold" style="font-size:larger;">IM</div>
+              </button>
+            </div>
+
           </div>
 
           <div class="row mb-4">
